--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   </div>
                   <div class="foto__foto">
                      <!-- Фото -->
-                     <img src="./image/foto.png" alt="Фотография">
+                     <img src="./image/foto.jpg" alt="Фотография">
                   </div>
                </div>
                <div class="text">
