--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/96460101" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+   <link type="image/x-icon" href="https://gagarinpro.github.io/image/favicon__mario.png" rel="shortcut icon">
    <!-- Название страницы, которое отображается в верху вкладки браузера -->
    <title>Super Misha from Connecticut</title>
    <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
