--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/96460101" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-   <link type="image/x-icon" href="https://gagarinpro.github.io/image/favicon__mario.png" rel="shortcut icon">
+   <link type="image/x-icon" href="https://dropmefiles.com/X9hgV" rel="shortcut icon">
    <!-- Название страницы, которое отображается в верху вкладки браузера -->
    <title>Super Misha from Connecticut</title>
    <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
    <meta name="viewport" content="width=device-width" initial-scale=1.0>
    <!-- изображение Марио, отображается перед названием страницы вверху вкладки браузера -->
-   <link rel="icon" href="./image/favicon__mario.png" type="image/png">
+   <link rel="icon" href="https://dropmefiles.com/X9hgV" type="image/png">
    <!-- подключение файла стилей, который убирает настройки браузера для одинакового отображения страницы во всех браузерах -->
    <link rel="stylesheet" href="css/resetStyle.css">
    <!-- подключение файла стилей -->
