--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                   <div class="name">
                      <div>MIKHAIL</div>
                      <div>GALITSYN</div>
+					 <div>GALITSYNTEST</div>
                   </div>
                   <div>
                      <div class="list"><span>age</span><span>:</span><span>28</span></div>
